word wrap + bug
Word wrap is there now, but btw font button switcher isn't working
anymore, probably an HTML change broke it in the last two commits

--- a/cookiestylesheet.css
+++ b/cookiestylesheet.css
@@ -76,6 +76,7 @@ h5 {
   font-size:12px;
   font-family:Special Elite;
   margin-left:1%;
+  word-wrap:break-word;
 }
 
 #algchal h2 {
